@startuml
'skinparam linetype ortho
class Connector{
- driver: WebDriver
- DATA: List<WebElement>
- url: String

+ setup()
+ open()
+ connect()
+ collect(): List<WebElement>
+ close()
+ getDriver(): WebDriver
}

class GetKeySource{
- box: JComboBox
- sources: String[]
- visible: boolean

+ getKey(RightData, SelectFromSheet, GetKeySource)
+ getKey(RightData, GetKeySource)
+ visible(boolean)
+ getBox(): JComboBox
}

class GUI_Reworked{
- CONNECTOR: Connector
- RIGHTDATA: RightData
- uploadButton: SearchAndUpload
- search: SearchAndUpload
- selectFromSheet: SelectFromSheet
- selectFromSheetFail: GetKeySource
- selectFromWebsiteFail: GetKeySource
- selectFromSheetButton: SelectFromSheetButton
- selectFromSheetButtonFail: SelectFromSheetButton
- getKeySource: GetKeySource
- selectKeySourceButton: SelectFromSheetButton
- loop: int
- failBoxText: TextString
- failExcelCollomText: TextString
- failWebsiteCollomTextL TextString
- matchesField: ScrollField
- infoMatchehs: TextString
- notFound: TextString
- noMatchesField: ScrollField

+ GUI_Reworked(Connector, RightData)
- window(ArrayList<IButton>, ArrayList<IComboBox>)
- positionPanels()
+ actions()
+ updaterGUI()

}

class GUI_Updater{
+ doInBackGround(): String
+ done()
}

interface IButton{
+ create()
}

interface IComboBox{
+ create()
}

class RightData{
- file: File
- collection: WorkSheetCollection
- keySources: ArrayList<ArrayList>
- noMatches: ArrayList<Object>
- dataSources: ArrayList<ArrayList>
- connector: Connector
- collected: ArrayList<ArrayList<ArrayList<String>>>
- firstRow: ArrayList<ArrayList>
- matches: ArrayList<ArrayList>
- keySource: String
- passFound: boolean

+ RightData(Connector)
+ createWorkBook()
+ readFile(String, String): ArrayList<ArrayList>
+ uploadFile()
+ gatherKeySource(String, String)
+ gatherDataSource(String, String)
+ checkData(String, String)
}

class ScrollField{
- field: JTextField
- scroll: JScrollPane
- info: String

+ ScrollField(int[])
+ setTextScrollField(ArrayList<ArrayList>, boolean, ArrayList<Object, GetKeySource, GetKeySource>
}

class SearchAndUpload{
- button: JButton
- box: JTextField
- visible: boolean
- <u> connection: boolean[]

+ SearchAndUpload(String, boolean)
+ action(Connector, RightData, SelectFromSheetButton)
+ action()
+ action(RightData, SelectFromSheet)
}

class SelectFromSheet{
- box: JComboBox
- sheets: String[]
- visible: boolean

+ getSheets(RightData)

}

class SelectFromSheetButton{
- button: JButton
- sheet: String
- <u> through: boolean[]
- <u> pressed: boolean[]
- visible: boolean

+ action(SelectFromSheet, RightData, GetKeySource, SelectFromSheetButton)
+ action(RightData, GetKeySource)
+ action(RightData, SelectFromSheet)
+ action(RightData, SelectFromSheet, GetKeySource, ScrollField, ScrollField, GetKeySource, GetKeySource)
}

class TextString{
- label: JLabel

+ create(String, boolean, int[])
}

class Writer{
- workbook: WorkBook
- collection: WorkSheetCollection

+ Writer(RightData)
+ createSheet(String, String, String)
- emptyingWorksheet(Worksheet, String)
}

SelectFromSheet <|-- GetKeySource
IComboBox <|.. GetKeySource
GUI_Reworked ..> GUI_Updater: Create

RightData <--o GUI_Reworked:  < 1 Verwerking 0..1
Connector <--o GUI_Reworked:  < 1 Connectie 0..1
SearchAndUpload <--o GUI_Reworked: 1 Actie 0..*
SelectFromSheet <--o GUI_Reworked: ^1 Selecteren 0..1
GetKeySource <--o GUI_Reworked: < 1 Zoektermen 0..*
SelectFromSheetButton <--o GUI_Reworked: 1 Selecter 0..*
TextString <---o GUI_Reworked: 1 TextStrings 0..*
ScrollField <---o GUI_Reworked: 1 TextField 0..*
Writer <---o GUI_Reworked: 1 Aanpasser 0..1

Connector <--o RightData: < 1 Krijgen 0..1

IButton <|.. SearchAndUpload
IButton <|.. SelectFromSheetButton
IButton <|.. Writer

IComboBox <|.. SelectFromSheet

SearchAndUpload <|-- SelectFromSheetButton



@enduml
